exports[`test renders and checked false when savedAccount is not account 1`] = `
<div
  id="1"
  onClick={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "position": "relative",
    }
  }>
  <div
    className="soft-ends push-double-left text-left hard-right outlined--light outlined--bottom relative">
    <div
      className="display-inline-block soft-half-ends one-whole">
      <h6
        className="flush-bottom float-left text-dark-tertiary">
        thing
      </h6>
    </div>
    <h5
      className="hard one-whole flush-bottom text-dark-tertiary">
      <span>
        ****
        6789
      </span>
      <span
        className="float-right soft-half-left">
        <div
          className="background--fill display-inline-block RQqqz"
          height="25px"
          width="40px" />
      </span>
    </h5>
  </div>
  <div
    className="locked-ends locked-sides">
    <input
      checked={false}
      id="label1"
      readOnly={true}
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "padding": "50px",
          "position": "absolute",
          "top": 0,
        }
      }
      type="checkbox" />
    <label
      htmlFor="label1"
      style={
        Object {
          "left": 0,
          "position": "absolute",
          "top": "50%",
        }
      } />
  </div>
</div>
`;

exports[`test renders and checked true when savedAccount is account 1`] = `
<div
  id="1"
  onClick={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "position": "relative",
    }
  }>
  <div
    className="soft-ends push-double-left text-left hard-right outlined--light outlined--bottom relative">
    <div
      className="display-inline-block soft-half-ends one-whole">
      <h6
        className="flush-bottom float-left text-dark-tertiary">
        thing
      </h6>
    </div>
    <h5
      className="hard one-whole flush-bottom text-dark-tertiary">
      <span>
        ****
        6789
      </span>
      <span
        className="float-right soft-half-left">
        <div
          className="background--fill display-inline-block RQqqz"
          height="25px"
          width="40px" />
      </span>
    </h5>
  </div>
  <div
    className="locked-ends locked-sides">
    <input
      checked={true}
      id="label1"
      readOnly={true}
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "padding": "50px",
          "position": "absolute",
          "top": 0,
        }
      }
      type="checkbox" />
    <label
      htmlFor="label1"
      style={
        Object {
          "left": 0,
          "position": "absolute",
          "top": "50%",
        }
      } />
  </div>
</div>
`;
